[tool.poetry]
name = "adventofcode2019"
version = "0.1.0"
description = ""
authors = ["James Roeder <jmaroeder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
ipython = "^7.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
